[package]
edition = "2024"
name = "hex-grid"
version = "0.1.1"
license = "MIT"
description = "A hexagonal grid library for Rust and WebAssembly"
repository = "https://github.com/yaxuajn97/hex-grid"
readme = "README.md"
keywords = ["rust", "hexagonal", "grid", "wasm", "webassembly"]
categories = ["data-structures", "geometry", "math"]
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
js-sys = "0.3"
[package.metadata.wasm-pack.profile.release]
wasm-opt = true
